--- a/views/admin-lte/catalogs/actionBarCourse.ejs
+++ b/views/admin-lte/catalogs/actionBarCourse.ejs
@@ -5,11 +5,11 @@
                 login to enroll to this course</span>
 
             <i ng-show="loading" class="fa fa-refresh fa-spin"></i>
-            <a ng-show="user && !enrolled" ng-click="enroll()" style="cursor: pointer"><strong>Enroll here to
+            <a ng-show="user && !isEnrolled" ng-click="enroll()" style="cursor: pointer"><strong>Enroll here to
                 participate in this course</strong></a>
 
-            <span ng-show="enrolled && !loading">You are following this course.</span>
-            <a ng-show="enrolled" class="" style="cursor:pointer" ng-click="leave()">
+            <span ng-show="isEnrolled && !loading">You are following this course.</span>
+            <a ng-show="isEnrolled" class="" style="cursor:pointer" ng-click="leave()">
                 LEAVE COURSE</a>
         </li>
         <li ng-show="isOwner">
@@ -49,7 +49,7 @@
 
 <script type="text/ng-template" id="actionBar-course-map">
     <ul class="">
-        <li ng-show="enrolled || isOwner">
+        <li ng-show="isEnrolled || isOwner">
 
         </li>
     </ul>
@@ -57,7 +57,7 @@
 
 <script type="text/ng-template" id="actionBar-course-discussion">
     <ul ng-controller="ActionBarController">
-            <li ng-show="enrolled || isOwner">
+            <li ng-show="isEnrolled || isOwner">
                 <a style="cursor: pointer;"
                    data-toggle="modal" data-target="#addNewTopicModal"
                    title="Add New Topic">
