--- a/views/admin-lte/catalogs/courseDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/courseDetailLeftTab.ejs
@@ -6,25 +6,25 @@
             <i class="ionicons ion-ios-home-outline"></i><br>
             <span>Preview</span></a></li>
 
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=map"
            data-toggle="tab" data-target="#map"
                 >
             <i class="ionicons ion-map"></i>
             <span>CourseMap</span></a></li>
-    <!--<li ng-show="enrolled || isOwner">
+    <!--<li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=updates" ng-show="user"
            data-toggle="tab" data-target="#updates"
                 >
             <i class="ionicons ion-ios-time-outline"></i><br>
             <span>Updates</span></a></li>-->
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=discussion" ng-show="user"
            data-toggle="tab" data-target="#discussion"
                 >
             <i class="ionicons ionicons ion-ios-chatboxes-outline"></i><br>
             <span>Discussion</span></a></li>
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=analytics" ng-show="user"
            data-toggle="tab" data-target="#analytics"
                 >
@@ -40,25 +40,25 @@
             <i class="ionicons ion-ios-home-outline"></i><br>
             <span>Preview</span></a></li>
 
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=map"
            data-toggle="tab" data-target="#map"
            onclick="hideTabMenu()" >
             <i class="ionicons ion-map"></i>
             <span>CourseMap</span></a></li>
-    <!--<li ng-show="enrolled || isOwner">
+    <!--<li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=updates" ng-show="user"
            data-toggle="tab" data-target="#updates"
                 >
             <i class="ionicons ion-ios-time-outline"></i><br>
             <span>Updates</span></a></li>-->
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=discussion" ng-show="user"
            data-toggle="tab" data-target="#discussion"
            onclick="hideTabMenu()" >
             <i class="ionicons ionicons ion-ios-chatboxes-outline"></i><br>
             <span>Discussion</span></a></li>
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=analytics" ng-show="user"
            data-toggle="tab" data-target="#analytics"
            onclick="hideTabMenu()" >
