isManager can install/uninstall widget

--- a/views/admin-lte/apps/gallery.ejs
+++ b/views/admin-lte/apps/gallery.ejs
@@ -20,9 +20,8 @@
                                 <a ng-hide="isInstalled(widget._id)" style="cursor: pointer"
                                    ng-click="install(location, widget.application, widget.name, course._id)"
                                    class="btn btn-primary btn-sm" role="button"><i class="fa fa-download"></i> Install </a>
-                                <a ng-show="isInstalled(widget._id)" style="cursor: pointer"
-                                   ng-click="uninstall(location, widget.application, widget.name, course._id)"
-                                   class="btn btn-warning btn-sm" role="button"><i class="fa fa-minus-square"></i> Uninstall </a>
+                                <a ng-show="isInstalled(widget._id)"
+                                   class="btn btn-warning btn-sm" role="button"> Installed </a>
 
                                 <span class="label label-info">W:{{widget.width}} by H:{{widget.height}}</span>
                             </div>
