tab name is not showing because there is '.tab' class

--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -14,7 +14,7 @@
     </li>
     <ol class="breadcrumb">
         <li class="home"><a href="#/cid/{{course._id}}?tab=preview">{{course.name}}</a></li>
-        <li class="active tab">{{currentTab}}</li>
+        <li class="active tabName">{{currentTab}}</li>
     </ol>
 
     <div class="navbar-custom-menu" ng-show="currentTab=='preview'" ng-include
