--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -1,3 +1,5 @@
+<div ng-controller="CourseController">
+
 <div class="col-xs-12 col-md-8">
     <img class="preview-image" ng-hide="course.picture"
          src="/img/courses/placeholder.png">
@@ -105,4 +107,6 @@
             </vg-controls>
         </videogular>
     </div>
+</div>
+
 </div>
