--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -1,110 +1,111 @@
 <div ng-controller="CourseController">
 
-<div class="col-xs-12 col-md-8">
-    <img class="preview-image" ng-hide="course.picture"
-         src="/img/courses/placeholder.png">
-    <img class="preview-image" ng-show="course.picture" ng-src="{{course.picture}}">
+    <div class="col-xs-12 col-md-8">
+        <img class="preview-image" ng-hide="course.picture"
+             src="/img/courses/placeholder.png">
+        <img class="preview-image" ng-show="course.picture" ng-src="{{course.picture}}">
 
-    <div class="container">
-        <div class="excerpt">
-            <div class="description">
-                Started
-                <strong>
-                    {{course.dateAdded | relativeDate}}
-                </strong>
+        <div class="container">
+            <div class="excerpt">
+                <div class="description">
+                    Started
+                    <strong>
+                        {{course.dateAdded | relativeDate}}
+                    </strong>
 
-                By
-                <strong>
-                    {{course.createdBy.displayName}}
-                </strong>
+                    By
+                    <strong>
+                        {{course.createdBy.displayName}}
+                    </strong>
 
-                <h1>
-                    <span class="visible-xs" style="margin-left:15px"></span>
-                    {{course.name}}
-                </h1>
+                    <h1>
+                        <span class="visible-xs" style="margin-left:15px"></span>
+                        {{course.name}}
+                    </h1>
 
-                <p ng-show="course.courseTags.length > 0" class="filter">
-                    <a class="label label-primary" style="cursor: default"
-                       ng-repeat="tag in course.courseTags">
-                        {{tag.name}}</a>
-                </p>
+                    <p ng-show="course.courseTags.length > 0" class="filter">
+                        <a class="label label-primary" style="cursor: default"
+                           ng-repeat="tag in course.courseTags">
+                            {{tag.name}}</a>
+                    </p>
 
-                <p>
-                    {{course.description}}
-                </p>
-            </div>
+                    <p>
+                        {{course.description}}
+                    </p>
+                </div>
 
-            <div class="" ng-show="course.video">
-                <a class="cursor videoButton" ng-click="playVideo()" aria-label="play intro video"
-                   title="Play Intro Video">
-                </a>
+                <div class="" ng-show="course.video">
+                    <a class="cursor videoButton" ng-click="playVideo()" aria-label="play intro video"
+                       title="Play Intro Video">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<!-- analytics-->
-<div id="course-preview-widgets" class="grid-stack col-xs-12 col-md-3"
-     ng-controller="widgetCoursePreviewController" >
+    <!-- analytics-->
+    <div id="course-preview-widgets" class="grid-stack col-xs-12 col-md-3"
+         ng-controller="widgetCoursePreviewController">
 
-    <div ng-show="!widgets || widgets.length == 0" class="empty-widget">
-        There is no registered widget here.
+        <div ng-show="!widgets || widgets.length == 0" class="empty-widget">
+            There is no registered widget here.
         <span ng-show="isOwner" class="empty-widget">
           Go to the widget store to add one.
         </span>
-    </div>
+        </div>
 
-    <div class="grid-stack-item"
-         data-gs-locked="yes"
-         data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}">
+        <div class="grid-stack-item"
+             data-gs-locked="yes"
+             data-gs-no-resize="yes"
+             ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}">
 
-        <div class="grid-stack-item-content">
-            <div class="box no-shadow">
-                <div class="box-header with-border">
-                    <h3 class="box-title">{{wdg.widget}}</h3>
+            <div class="grid-stack-item-content">
+                <div class="box no-shadow">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">{{wdg.widget}}</h3>
 
-                    <div class="box-tools pull-right">
-                        <button class="btn btn-box-tool" data-widget="remove"
-                                data-toggle="tooltip" title="Remove"
-                                ng-click="closeWidget(wdg.widgetId._id);"
-                        >
-                            <i class="fa fa-times"></i></button>
+                        <div class="box-tools pull-right">
+                            <button class="btn btn-box-tool" data-widget="remove"
+                                    data-toggle="tooltip" title="Remove"
+                                    ng-click="closeWidget(wdg.widgetId._id);"
+                            >
+                                <i class="fa fa-times"></i></button>
+                        </div>
                     </div>
-                </div>
-                <div class="box-body-widget">
+                    <div class="box-body-widget">
 
-                    <div ng-include src="wdg.widgetId.entryPoint"
-                         onload="initWidgetButton(wdg.widgetId._id)">
+                        <div ng-include src="wdg.widgetId.entryPoint"
+                             onload="initWidgetButton(wdg.widgetId._id)">
+                        </div>
+
                     </div>
-
+                    <div class="box-footer"></div>
                 </div>
-                <div class="box-footer"></div>
             </div>
         </div>
     </div>
-</div>
-<!-- analytics-->
+    <!-- analytics-->
 
-<div class="videoPlayerWrapper" ng-show="course.video && isPlaying" ng-click="stopVideo()">
-    <div class="videoPlayerContainer" ng-click="$event.stopPropagation()" ng-controller="VideoContentPreviewController">
-        <videogular vg-cue-points="cuePoints" vg-player-ready="onPlayerReady($API)">
-            <vg-media vg-src="videoSources"></vg-media>
-            <vg-controls>
-                <vg-play-pause-button></vg-play-pause-button>
-                <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
-                <vg-scrub-bar>
-                    <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-                </vg-scrub-bar>
-                <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
-                <vg-volume>
-                    <vg-mute-button></vg-mute-button>
-                    <vg-volume-bar></vg-volume-bar>
-                </vg-volume>
-                <vg-fullscreen-button></vg-fullscreen-button>
-            </vg-controls>
-        </videogular>
+    <div class="videoPlayerWrapper" ng-show="course.video && isPlaying" ng-click="stopVideo()">
+        <div class="videoPlayerContainer" ng-click="$event.stopPropagation()"
+             ng-controller="VideoContentPreviewController">
+            <videogular vg-cue-points="cuePoints" vg-player-ready="onPlayerReady($API)">
+                <vg-media vg-src="videoSources"></vg-media>
+                <vg-controls>
+                    <vg-play-pause-button></vg-play-pause-button>
+                    <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
+                    <vg-scrub-bar>
+                        <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                    </vg-scrub-bar>
+                    <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
+                    <vg-volume>
+                        <vg-mute-button></vg-mute-button>
+                        <vg-volume-bar></vg-volume-bar>
+                    </vg-volume>
+                    <vg-fullscreen-button></vg-fullscreen-button>
+                </vg-controls>
+            </videogular>
+        </div>
     </div>
-</div>
 
 </div>
