--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -64,7 +64,7 @@
                     <div class="box-header with-border">
                         <h3 class="box-title">{{wdg.widget}}</h3>
 
-                        <div class="box-tools pull-right">
+                        <div class="box-tools pull-right" ng-show="checkOwnership(wdg.userId)">
                             <button class="btn btn-box-tool" data-widget="remove"
                                     data-toggle="tooltip" title="Remove"
                                     ng-click="closeWidget(wdg.widgetId._id);"
