coursedetail page is refactored.

--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -1,8 +1,7 @@
 <div ng-controller="CourseController">
 
     <div class="col-xs-12 col-md-8">
-        <img class="preview-image" ng-hide="course.picture"
-             src="/img/courses/placeholder.png">
+        <img class="preview-image" ng-hide="course.picture" src="/img/courses/placeholder.png">
         <img class="preview-image" ng-show="course.picture" ng-src="{{course.picture}}">
 
         <div class="container">
