--- a/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
@@ -1,9 +1,6 @@
 <!-- analytics-->
 <div id="course-analytics-widgets" class="grid-stack col-xs-12 col-md-11"
-     ng-controller="widgetController"
-     ng-init="location='course-analytics';
-              initiateDraggableGrid('course-analytics');
-     ">
+     ng-controller="widgetCourseAnalyticsController" >
     <div ng-show="!widgets || widgets.length == 0" class="empty-widget">
         There is no registered widget here.
         <span ng-show="isOwner" class="empty-widget">
@@ -14,13 +11,12 @@
          data-gs-locked="yes"
          data-gs-no-resize="yes"
          ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}" >
-        <!--on-finish-render="OnAfterWidgetLoadedcourse-analytics"-->
         <div class="grid-stack-item-content">
 
             <div class="box no-shadow">
                 <div class="box-header with-border">
                     <h3 class="box-title">{{wdg.widget}}</h3>
-                    <div class="box-tools pull-right">
+                    <div class="box-tools pull-right" ng-show="checkOwnership(wdg.userId)">
                         <button class="btn btn-box-tool" data-widget="remove"
                                 data-toggle="tooltip" title="Remove"
                                 ng-click="closeWidget(wdg.widgetId._id);"
