--- a/public/angular/views/pdf-comment.html
+++ b/public/angular/views/pdf-comment.html
@@ -55,7 +55,7 @@
                 <div class="box box-solid">
                     <div class="box-body">
                             <span class="posted-at">
-                              Posted <strong>{{comment.date_created | relativeDate}}</strong>
+                              Posted <strong>{{comment.date | relativeDate}}</strong>
                               By <strong><span>{{comment.author}}</span></strong>
                             </span>
 
