--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -1,12 +1,12 @@
 <div ng-controller="CourseController">
 
     <div class="col-xs-12 col-md-8">
-        <img class="preview-image" ng-hide="course.picture" src="/img/courses/placeholder.png">
-        <img class="preview-image" ng-show="course.picture" ng-src="{{course.picture}}">
-
-        <div class="container">
-            <div class="excerpt">
-                <div class="description">
+        <div class="row">
+            <div class="box box-solid excerpt">
+                <div class="box-header with-border">
+                    <h3 class="box-title"> {{course.name}} </h3>
+                </div><!-- /.box-header -->
+                <div class="box-body description">
                     Started
                     <strong>
                         {{course.dateAdded | relativeDate}}
@@ -17,29 +17,56 @@
                         {{course.createdBy.displayName}}
                     </strong>
 
-                    <h1>
-                        <span class="visible-xs" style="margin-left:15px"></span>
-                        {{course.name}}
-                    </h1>
-
                     <p ng-show="course.courseTags.length > 0" class="filter">
                         <a class="label label-primary" style="cursor: default"
                            ng-repeat="tag in course.courseTags">
                             {{tag.name}}</a>
                     </p>
 
-                    <p>
-                        {{course.description}}
-                    </p>
-                </div>
-
-                <div class="" ng-show="course.video">
-                    <a class="cursor videoButton" ng-click="playVideo()" aria-label="play intro video"
-                       title="Play Intro Video">
-                    </a>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-xs-12 preview-image-container">
+                <img class="preview-image" ng-hide="course.picture" src="/img/courses/placeholder.png">
+                <img class="preview-image" ng-show="course.picture" ng-src="{{course.picture}}">
+            </div>
+        </div>
+        <div class="row" style="height: 15px;"></div>
+        <div class="row">
+            <div class="col-xs-12 col-md-5" ng-show="course.video">
+                <videogular vg-cue-points="cuePoints" vg-player-ready="onPlayerReady($API)">
+                    <vg-media vg-src="videoSources"></vg-media>
+                    <vg-controls>
+                        <vg-play-pause-button></vg-play-pause-button>
+                        <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
+                        <vg-scrub-bar>
+                            <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                        </vg-scrub-bar>
+                        <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
+                        <vg-volume>
+                            <vg-mute-button></vg-mute-button>
+                            <vg-volume-bar></vg-volume-bar>
+                        </vg-volume>
+                        <vg-fullscreen-button></vg-fullscreen-button>
+                    </vg-controls>
+                </videogular>
+            </div>
+
+            <div class="col-xs-12" ng-class="{'col-md-7': (course.video)}">
+                <div class="box box-solid excerpt no-shadow">
+                    <div class="box-header with-border">
+                        <h3 class="box-title"> Description: </h3>
+                    </div><!-- /.box-header -->
+                    <div class="box-body description no-border">
+                        <p ng-bind-html="course.description | unsafe">
+                        </p>
+                    </div><!-- /.box-body -->
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
     <!-- analytics-->
@@ -85,26 +112,5 @@
     </div>
     <!-- analytics-->
 
-    <div class="videoPlayerWrapper" ng-show="course.video && isPlaying" ng-click="stopVideo()">
-        <div class="videoPlayerContainer" ng-click="$event.stopPropagation()"
-             ng-controller="VideoContentPreviewController">
-            <videogular vg-cue-points="cuePoints" vg-player-ready="onPlayerReady($API)">
-                <vg-media vg-src="videoSources"></vg-media>
-                <vg-controls>
-                    <vg-play-pause-button></vg-play-pause-button>
-                    <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
-                    <vg-scrub-bar>
-                        <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-                    </vg-scrub-bar>
-                    <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
-                    <vg-volume>
-                        <vg-mute-button></vg-mute-button>
-                        <vg-volume-bar></vg-volume-bar>
-                    </vg-volume>
-                    <vg-fullscreen-button></vg-fullscreen-button>
-                </vg-controls>
-            </videogular>
-        </div>
-    </div>
 
 </div>
