--- a/views/admin-lte/catalogs/newCourseModal.ejs
+++ b/views/admin-lte/catalogs/newCourseModal.ejs
@@ -8,24 +8,28 @@
 
                     <div class="box-tools pull-right">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                aria-hidden="true">&times;</span></button>
+                                    aria-hidden="true">&times;</span></button>
                     </div>
                 </div>
 
                 <div class="box-body no-border">
-                    <form ng-submit="saveCourse(newCourseForm.$valid)" name="newCourseForm"  novalidate>
+                    <form ng-submit="saveCourse(newCourseForm.$valid)" name="newCourseForm" novalidate>
                         <fieldset>
-                            <div class="control-group" >
+                            <div class="control-group">
                                 <label class="control-label" for="course">Course Name </label>
 
-                                <p class="help-block">Course name can contain any letters or numbers, minimum 3 characters</p>
+                                <p class="help-block">Course name can contain any letters or numbers, minimum 3
+                                    characters</p>
 
-                                <div class="controls" ng-class="{ 'has-error' : newCourseForm.course.$invalid && !newCourseForm.$pristine }">
+                                <div class="controls"
+                                     ng-class="{ 'has-error' : newCourseForm.course.$invalid && !newCourseForm.$pristine }">
                                     <input type="text" id="course" name="course" placeholder="" class="form-control"
                                            ng-model="course.name"
                                            required ng-required="true"
                                            ng-minlength="3">
-                                    <p ng-show="newCourseForm.course.$invalid && !newCourseForm.$pristine" class="help-block">Course name is required.</p>
+
+                                    <p ng-show="newCourseForm.course.$invalid && !newCourseForm.$pristine"
+                                       class="help-block">Course name is required.</p>
                                 </div>
                             </div>
 
@@ -35,13 +39,16 @@
 
                                 <p class="help-block">Description about this course</p>
 
-                                <div class="controls"  ng-class="{ 'has-error' : newCourseForm.description.$invalid && !newCourseForm.$pristine }">
-                                <textarea type="description" id="description" name="description" placeholder=""
-                                          class="form-control" ng-model="course.description"
-                                          required ng-required="true"
-                                          ng-minlength="6">
-                                </textarea>
-                                <p ng-show="newCourseForm.description.$invalid && !newCourseForm.$pristine" class="help-block">Please fill in a little bit of description about this course.</p>
+                                <div class="controls"
+                                     ng-class="{ 'has-error' : newCourseForm.description.$invalid && !newCourseForm.$pristine }">
+
+                                    <div id="description" name="description"
+                                         ng-model="course.description"
+                                         quill>
+                                    </div>
+                                    <p ng-show="newCourseForm.description.$invalid && !newCourseForm.$pristine"
+                                       class="help-block">Please fill in a little bit of description about this
+                                        course.</p>
                                 </div>
                             </div>
 
@@ -53,7 +60,6 @@
 
                                 <div class="controls">
                                     <tags-input ng-model="tagsRaw">
-                                        <!--<auto-complete source="loadTags($query)"></auto-complete>-->
                                     </tags-input>
 
                                 </div>
@@ -61,6 +67,7 @@
 
                             <div class="control-group">
                                 <p class="help-block"></p>
+
                                 <p class="help-block"></p>
                                 <br class="clear">
 
@@ -71,7 +78,8 @@
                                         <button name="submitButton" class="btn btn-primary btn-block"
                                                 ng-click="newCourseForm.$pristine=false">
                                             Create New Course
-                                            <spinner show="isLoading"></spinner></button>
+                                            <spinner show="isLoading"></spinner>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
