fix widget uninstall

--- a/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
@@ -19,7 +19,7 @@
                     <div class="box-tools pull-right" ng-show="checkOwnership(wdg.userId)">
                         <button class="btn btn-box-tool" data-widget="remove"
                                 data-toggle="tooltip" title="Remove"
-                                ng-click="closeWidget(wdg.widgetId._id);"
+                                ng-click="closeWidget(wdg._id);"
                                 >
                             <i class="fa fa-times"></i></button>
                     </div>
