start to do admin tabs thing

--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -18,6 +18,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#/categories">Categories</a></li>
                             <li><a href="#/widgets">Widgets</a></li>
+                            <li><a href="#/tabs">tabs</a></li>
                         </ul>
                     </li>
                 </ul>
