--- a/public/angular/views/pdf-viewer.html
+++ b/public/angular/views/pdf-viewer.html
@@ -9,8 +9,8 @@
     </div>
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
         <div class="col-md-5 text-center">
-          <div class="col-md-12 text-center" class="annoZonesTriggerClass" id="annoZonesTriggersId">
-            Annotation-Zones: On
+          <div class="col-md-12 text-center" class="annoZonesTriggerClass" id="annoZonesTriggersId" ng-click="switchShowAnnotationZone()">
+            Annotation-Zones: {{$root.switchShowAnnoZones}}
           </div>
 
 
