--- a/views/course-analytics/enrolled-users.ejs
+++ b/views/course-analytics/enrolled-users.ejs
@@ -7,7 +7,7 @@
         </tr>
         <tr ng-repeat="user in userList">
             <td>{{$index+1}}.</td>
-            <td>{{user.user.username}}</td>
+            <td>{{user.user.displayName}}</td>
         </tr>
         </tbody>
     </table>
