add default tabs config

--- a/views/admin-lte/catalogs/courseDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/courseDetailLeftTab.ejs
@@ -17,7 +17,7 @@
         <a href="#/cid/{{course._id}}?tab=discussion" ng-show="user"
            data-toggle="tab" data-target="#discussion"
                 >
-            <i class="ionicons ionicons ion-ios-chatboxes-outline"></i><br>
+            <i class="ionicons ion-ios-chatboxes-outline"></i><br>
             <span>Discussion</span></a></li>
 
     <li ng-show="isEnrolled || isOwner || isManager">
